--- a/app/client/src/styles/globals.css
+++ b/app/client/src/styles/globals.css
@@ -4,23 +4,23 @@
 
 @layer base {
   html {
-    @apply text-gray-800 dark:text-gray-200 dark:bg-gray-800 bg-gray-200;
+    @apply bg-gray-200 text-gray-800 dark:bg-gray-800 dark:text-gray-200;
   }
 
   h1 {
-    @apply text-2xl font-bold md:text-4xl;
+    @apply mb-6 text-2xl font-bold md:text-4xl;
   }
 
   h2 {
-    @apply text-xl font-bold md:text-3xl;
+    @apply mb-4 text-xl font-bold md:text-3xl;
   }
 
   h3 {
-    @apply text-lg font-bold md:text-2xl;
+    @apply mb-2 text-lg font-bold md:text-2xl;
   }
 
   h4 {
-    @apply text-base font-bold md:text-lg;
+    @apply mb-1 text-base font-bold md:text-lg;
   }
 
   body {
